subject.yml
---
# subject main -> cluster ip 라서 type은 안정해도 됨
kind: Service
apiVersion: v1
metadata:
  name:  subject
spec:
  selector:
    app: subject
  ports:
  - port: 80
    targetPort: 80

---
# subject main
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subject
spec:
  replicas: 3
  selector:
    matchLabels:
      app: subject
  template:
    metadata:
      labels:
        app: subject
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: subject
        image: pshhhhh98/subject:main #도커허브에 있는 이미지 끌어오기
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80 #pod로 갈 포트이기때문에 80으로 맞춰줘야함
