subject_503.yml
---
# 503error -> cluster ip 라서 type은 안정해도 됨
kind: Service
apiVersion: v1
metadata:
  name:  error503
spec:
  selector:
    app: error503
  ports:
  - port: 80
    targetPort: 80

---
# 503error
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error503
spec:
  replicas: 3
  selector:
    matchLabels:
      app: error503
  template:
    metadata:
      labels:
        app: error503
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: error503
        image: pshhhhh98/subject:error503503   #도커허브에 있는 이미지 끌어오기
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80 #pod로 갈 포트이기때문에 80으로 맞춰줘야함
