subject-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portal
  annotations: #index.html을 nginx의 기본경로로 지정하기
    nginx.ingress.kubernetes.io/rewrite-target: /
  
spec:
  ingressClassName: nginx
  rules:
  - host: www.subject.pri
    http:
      paths:
      - pathType: Prefix
        path: "/?$"  # 메인 페이지 요청
        backend:
          service:
            name: subject
            port:
              number: 80
      - pathType: Prefix
        path: "/*"  # 모든 다른 요청은 503 에러 페이지
        backend:
          service:
            name: error503
            port:
              number: 80
